Required inputs in form. Styles for mobile fixed. (contact button hidden by footer)

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -69,6 +69,11 @@ ul, li {
   margin: 0;
 }
 
+html {
+  overflow-x: hidden;
+  max-width: 100vw;
+}
+
 // BASE
 body {
   font-family: $font;
@@ -86,7 +91,7 @@ body {
   min-height: 100vh;
   margin: 0;
   padding-top: 66px;
-  padding-bottom: 6rem;
+  padding-bottom: 8.5rem;
 }
 
 main {
